mise à jour des ipynb

--- a/cours/Opto.ipynb
+++ b/cours/Opto.ipynb
@@ -620,7 +620,7 @@
       "\n",
       "$\\sigma_{\\Delta t_{tot}} = \\sqrt{\\sigma_{\\Delta t_m}^2 + \\sigma_{\\Delta t_\\lambda}^2}$\n",
       "\n",
-      "Par d\u00e9finition, $BP = \\cfrac{1}{\\sigma_{\\Delta t_{tot}}}$\n",
+      "Par d\u00e9finition, $BP = \\cfrac{0.35}{\\sigma_{\\Delta t_{tot}}}$\n",
       "\n",
       "AN: FGI multimode : $n_c=1,53;n_g=1.5$\n",
       "\n",
@@ -787,7 +787,429 @@
      "source": [
       "Pour toute diode, $I = I_s\\left(\\exp^{\\cfrac{V}{nU_T}} - 1\\right) - I_{ph}$\n",
       "\n",
-      "Ce $I_{ph}$ d\u00e9cale le diagrame $I=f(V)$ vers le bas, ce qui fait que pour des tensions positives, le courant est n\u00e9gatif, donc la PD fournit de l\u2019\u00e9nergie au circuit. "
+      "Ce $I_{ph}$ d\u00e9cale le diagrame $I=f(V)$ vers le bas, ce qui fait que pour des tensions positives, le courant est n\u00e9gatif, donc la PD fournit de l\u2019\u00e9nergie au circuit ; et pour des tensions n\u00e9gatives, le courant est n\u00e9gatif aussi, donc la PD\u00a0fournit de l\u2019\u00e9nergie au circuit. On se place g\u00e9n\u00e9ralement dans ce troisi\u00e8me cadrant pour la photod\u00e9tection."
+     ]
+    },
+    {
+     "cell_type": "heading",
+     "level": 3,
+     "metadata": {},
+     "source": [
+      "Mod\u00e8le petit signal"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "TODO: la diode (A en bas, K en haut, triangle vers le haut) est \u00e9quivalente \u00e0 une source de courant (Iph) en parall\u00e8le \u00e0 une capa Cj et une r\u00e9sistance Rsh, A en bas, et une r\u00e9sistance Rs vers K en haut.\n",
+      "\n",
+      "$R_{sh} > M\\Omega$\n",
+      "\n",
+      "$R_s < \\Omega$\n",
+      "\n",
+      "$C_j(V)=\\cfrac{C_j(V=0)}{\\sqrt{1+\\cfrac{V}{V_{PN}}}}$\n",
+      "\n",
+      "$V_{PN}$ est le potentiel de jonction: 0.75V dans le silicium"
+     ]
+    },
+    {
+     "cell_type": "heading",
+     "level": 3,
+     "metadata": {},
+     "source": [
+      "Photodiode PIN"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "slide 29(32)\n",
+      "\n",
+      "Pour diminuer $C_j$, on rajoute \u00e0 la jonction PN une couche faiblement dop\u00e9e (\u00abIntrins\u00e8que\u00bb) qui va \u00e9tendre la ZCE: plus la ZCE\u00a0est importante, plus la capa de jonction est faible.\n",
+      "\n",
+      "* Structure\n",
+      "\n",
+      "    - La zone frontale doit \u00e0tre la plus fine possible\n",
+      "    - La ZCE est le lieu de collecte des photons\n",
+      "    - La zone arri\u00e8re voit tr\u00e8s peu de photons\n",
+      "\n",
+      "* Bande-Passante\n",
+      "\n",
+      "Elle est li\u00e9e\n",
+      "\n",
+      "    - Au temps de transit des porteurs: $t_{tr} = \\cfrac{d}{v_n} \\simeq 10$ps\n",
+      "    - La constante de temps li\u00e9e \u00e0 la capa de jonction : TODO masse, Rload, diode rightarrow $f_c=\\cfrac{1}{2\\pi R_{load}C_j}$\n",
+      "\n",
+      "Des deux ph\u00e9nom\u00e8nes, le plus contraignant impose la Bande Passante\n",
+      "\n",
+      "* Sensibilit\u00e9 d\u2019une diode PIN:\n",
+      "\n",
+      "$R_\\lambda = \\cfrac{I_{ph}}{F_{recu}}$ en A/W (R pour Responsivity)\n",
+      "\n",
+      "$F_{recu}$ = nombre de photons re\u00e7us par seconde \u00d7 $h_\\nu$\n",
+      "\n",
+      "$\\nu_q=\\cfrac{\\text{nombre de paires electron-trou par seconde}}{\\text{nombre de photons par seconde}}$\n",
+      "\n",
+      "nombre de paires electron-trou par seconde = $\\cfrac{I_{ph}}{q} \\Rightarrow R_\\lambda=\\cfrac{q}{h_\\nu}\\nu_q=\\cfrac{\\lambda}{1.24}\\nu_q$ pour $\\lambda$ en $\\mu$m."
+     ]
+    },
+    {
+     "cell_type": "heading",
+     "level": 3,
+     "metadata": {},
+     "source": [
+      "Bruit dans les PD"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "La notion de bruit regroupe deux aspects:\n",
+      "\n",
+      "- Les perturbations ext\u00e9rieures au syst\u00e8me: en g\u00e9n\u00e9ral, ce sont des signaux d\u00e9terministes qui d\u00e9pendent de l\u2019environnement.\n",
+      "- Les perturbations propres au syst\u00e8me: ph\u00e9nom\u00e8nes al\u00e9atoires qui peuvent \u00eatre trait\u00e9s par la physique quantique ou la physique statistique.\n",
+      "\n",
+      "Dans le cas du bruit en \u00e9lectronique, deux sources:\n",
+      "\n",
+      "- Le bruit thermique (ou de Johnson) associ\u00e9 aux r\u00e9sistances $\\Rightarrow$ variation al\u00e9atoire du courant qui traverse la r\u00e9sistance ou de la tension \u00e0 ses bornes.\n",
+      "- Le bruit de grenaille (ou de Shottky) associ\u00e9 aux jonctions PN $\\Rightarrow$ variation du courant qui traverse la jonction\n",
+      "\n",
+      "* La puissance de bruit\n",
+      "\n",
+      "La puissance du bruit est infinie (int\u00e9grale d\u2019un bruit blanc sur tout le spectre), donc on d\u00e9fini toujours une puissance de bruit sur une bande passante donn\u00e9e.\n",
+      "\n",
+      "* La densit\u00e9 spectrale de puissance ($S_B$)\n",
+      "\n",
+      "C\u2019est la puisnace du bruit sur 1Hz\n",
+      "\n",
+      "$P_B = \\int_0^{BP}S_Bdf$, avec $S_B$ en W/Hz\n",
+      "\n",
+      "Bruit thermique et grenailles sont des bruits blancs, donc $P_B=S_B\\times BP$\n",
+      "\n",
+      "* Densit\u00e9 spectrale de courant et de tension\n",
+      "\n",
+      "$S_B=S_iR_{load}$, $S_i$ en A\u00b2/Hz\n",
+      "\n",
+      "$S_B=\\cfrac{S_v}{R_{load}}, $S_v$ en V\u00b2/Hz\n",
+      "\n",
+      "Pour le bruit thermique, $S_i=\\cfrac{4k_BT}{R}$ et $S_v=4k_BTR$ TODO R//source de courant et R s\u00e9rie avec source de tension\n",
+      "\n",
+      "Pour le bruit de grenaille, $S_i=2qI$ TODO\u00a0diode // source de courant\n",
+      "\n",
+      "* Courant ou tension de bruit\n",
+      "\n",
+      "On d\u00e9finit $i_d=\\sqrt{S_i}$ en A/$\\sqrt{\\text{Hz}}$ et $v_d=\\sqrt{S_v}$ en V/$\\sqrt{\\text{Hz}}$\n",
+      "\n",
+      "Ce sont des valeursefficaces calcul\u00e9es sur une bande de 1Hz.\n",
+      "\n",
+      "Rem: lois de Kirschoff\n",
+      "\n",
+      "TODO ib1 et ib2 vers ibT => $i_{b_T} = \\sqrt{i_{b_1}^2+i_{b_2}^2}$\n",
+      "\n",
+      "TODO vb1 | vb2 \u2212 vbt | => $v_{b_T} = \\sqrt{v_{b_1}^2+v_{b_2}^2}$\n",
+      "\n",
+      "* Mod\u00e8le en bruit de la photodiode\n",
+      "\n",
+      "TODO i_d // C_j\n",
+      "\n",
+      "Le courant que parcours la PD\u00a0est la somme de deux termes:\n",
+      "\n",
+      "- Le courant $I_{ph}$ photod\u00e9tect\u00e9\n",
+      "- $I_{obs}$, courant d\u2019obscurit\u00e9\n",
+      "\n",
+      "$i_d=\\sqrt{S_i} = \\sqrt{2q(I_{ph}+I_{obs})}$"
+     ]
+    },
+    {
+     "cell_type": "heading",
+     "level": 3,
+     "metadata": {},
+     "source": [
+      "Puissance \u00e9quivalente de bruit"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "La PD transforme la puissance optique en courant \u00e9lectrique => un bruit \u00e9lectrique est \u00e9quivalent un bruit optique: \n",
+      "\n",
+      "$PEB=\\cfrac{i_{BT}}{R_\\lambda}$ en W/$\\sqrt{\\text{Hz}}$\n",
+      "\n",
+      "$P_{B_{\\text{optique}}} = PEB\\sqrt{BP_{det}}$ avec $BP_{det} = \\cfrac{\\pi}{2}BP_{\\text{systeme}}$ si le syst\u00e8me est du premier ordre.\n",
+      "\n",
+      "Exemple:\n",
+      "\n",
+      "TODO diode en inverse, VCE en haut, patte inverseuse d\u2019un ampli diff en bas C_f // R_f en contre r\u00e9action, v_out en sortie\n",
+      "\n",
+      "$V_{out} = \\cfrac{R_f}{1+R_fC_fp}i_{out}$\n",
+      "\n",
+      "$f_c=\\cfrac{1}{2\\pi R_fC_f}$\n",
+      "\n",
+      "On consid\u00e8re l\u2019ampli comme id\u00e9al (pas de bruit)\n",
+      "\n",
+      "$S_i=2q < i_{ph} > + 2qI_{obs} + \\cfrac{4kT}{R_f}$\n",
+      "\n",
+      "$i_{bt} = \\sqrt{S_i}=\\sqrt{2q(I_{ph}+I_{obs})+\\cfrac{4kT}{R_f}}$ TODO: I_ph => <I_ph>\n",
+      "\n",
+      "$PEB=\\cfrac{\\sqrt{2q(I_{ph}+I_{obs})+\\cfrac{4kT}{R_f}}}{R_\\lambda}$ TODO: I_ph => <I_ph>"
+     ]
+    },
+    {
+     "cell_type": "heading",
+     "level": 3,
+     "metadata": {},
+     "source": [
+      "Photodiode \u00e0 avalanche (APD)"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "On impose un champ E interne dans la ZCE, les porteurs sont fortement acc\u00e9ler\u00e9s, ils lib\u00e8rent d\u2019autre paires electron-trou par transfert d\u2019\u00e9nergie cin\u00e9tique, qui sont elles-m\u00eame fortement acc\u00e9l\u00e9r\u00e9es.\n",
+      "\n",
+      "slide 30(33)\n",
+      "\n",
+      "* Structure: \n",
+      "\n",
+      "Le champ intense est r\u00e9alis\u00e9 par une zone \u00e0 tr\u00e8s for dopage. \n",
+      "\n",
+      "On r\u00e9alise une zone large de faible dopage qui permet de collecter les photons. \n",
+      "\n",
+      "* Gain d\u2019une APD\n",
+      "\n",
+      "$G=\\cfrac{I_{APD}}{I_{ph}}=\\cfrac{1}{1-\\left(\\cfrac{V_{APD}-R_sI_{APD}}{V_B}\\right)^m}$, $V_B$ est la tension de claquage, $m \\in [3,6]$\n",
+      "\n",
+      "* Bande passante\n",
+      "\n",
+      "La limitation de la bande passante est d\u00fbe au temps de transit des porteurs dans la zone de g\u00e9n\u00e9ration plus le temps de multiplication\n",
+      "\n",
+      "$t_d=\\cfrac{d_g}{v_n} + \\cfrac{d_g}{v_p} + t_{\\text{mult}}$\n",
+      "\n",
+      "NB: $t_{d_{APD}} >> T_{d_{PIN}}$\n",
+      "\n",
+      "* Domaines d\u2019utilisation\n",
+      "\n",
+      "+-----------------+-----------------+-----------------+\n",
+      "|                 |      PIN        |    \u00a0\u00a0\u00a0APD       |\n",
+      "+-----------------+-----------------+-----------------+\n",
+      "|        BP       |        +        |       -         |\n",
+      "+-----------------+-----------------+-----------------+\n",
+      "|  sensibilit\u00e9    |        -        |       +         |\n",
+      "+-----------------+-----------------+-----------------+\n",
+      "| mise en \u0153uvre   |        ++       |       -         |\n",
+      "+-----------------+-----------------+-----------------+\n",
+      "\n",
+      "\n",
+      "Principalement des applications de puissance optique constante de tr\u00e8s faible intensit\u00e9 (spatial)\n",
+      "\n",
+      "AN: $F_{\\text{recu}} = 0.1\\mu W$, APD: $R_\\lambda = 280$ A/W,\n",
+      "\n",
+      "le syst\u00e8me de d\u00e9tection a un bruit de d\u00e9tection propre dans l\u2019obscurit\u00e9 $S_{i_{obs}} = 3.3\\cdot 10^{-23}$ A\u00b2/Hz\n",
+      "\n",
+      "=> <$I_{ph}$> = 28 muA => $S_{i_g} = 8.96\\cdot10^{-24}$A\u00b2/Hz\n",
+      "\n",
+      "BP = 1GHz => PEB = $2.3\\cdot10^{-14}$W/$\\sqrt{Hz}$ => $P_{b_{opt}} = 7.3\\cdot10^{-4}$ \\muW\n",
+      "\n",
+      "Soit $RSB = \\cfrac{0.1}{7.3\\cdot10^{-4}}\\simeq 100$\n",
+      "\n",
+      "Si la PD est une PIN, avec $R_\\lambda = 0.5$, $RSB\\simeq0.15$"
+     ]
+    },
+    {
+     "cell_type": "heading",
+     "level": 1,
+     "metadata": {},
+     "source": [
+      "Diodes electroluminescentes"
+     ]
+    },
+    {
+     "cell_type": "heading",
+     "level": 2,
+     "metadata": {},
+     "source": [
+      "Effet photo\u00e9lectriques"
+     ]
+    },
+    {
+     "cell_type": "heading",
+     "level": 3,
+     "metadata": {},
+     "source": [
+      "Rappel paire \u00e9lectron-trou"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Dans tout mat\u00e9riau semi-conducteur, il existe des \u00e9lectrons faiblements li\u00e9s \u00e0 la maille cristalline. Sous l\u2019effet d\u2019un apport d\u2019\u00e9nergie (agitation thermique, champ EM\u2026), ces \u00e9lectrons vont s\u2019arracher de la maille cristalline, passant ainsi de la bande de valence \u00e0 la bande de conduction. Ils laissent localement une lacune de charge \u00e9lectrique assimilable \u00e0 une particule de charge positive: le trou. On a alors une paire \u00e9lectron-trou.\n",
+      "\n",
+      "L\u2019\u00e9nergie n\u00e9cessaire \u00e0 un \u00e9loctron pour passer de la valence \u00e0 la conduction est $E_g=E_c-E_v$. La valeur de $E_g$ est propre \u00e0 chaque semi-conducteur (slide 28)"
+     ]
+    },
+    {
+     "cell_type": "heading",
+     "level": 3,
+     "metadata": {},
+     "source": [
+      "Effets photo\u00e9lectriques"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Il existe trois types :\n",
+      "\n",
+      "* Absorption: un photon d\u2019\u00e9nergie $h_\\nu > E_g$ arrive sur un \u00e9lectron dans la couche de valence;\n",
+      "* \u00c9mission spontan\u00e9e: une paire \u00e9lectron-trou se recombine, et lib\u00e8re une \u00e9nergie $E_g$ sous forme d\u2019un photon;\n",
+      "* \u00c9mission stimul\u00e9e: un photon incident d\u00e9clenche la recombinaison. Ce photon n\u2019est pas absorb\u00e9, mais un nouveau photon est g\u00e9n\u00e9r\u00e9, dont l\u2019\u00e9nergie est strictement \u00e9gale \u00e0 celle du photon incident. Ils ont la m\u00eame longueur d\u2019onde et sont en phase.\n",
+      "\n",
+      "Rmq: Toutes les recombinaisons ne sont pas radiatives\n",
+      "\n",
+      "* Il existe des \u00abpi\u00e8ges\u00bb, c\u2019est \u00e0 dire des niveaux d\u2019\u00e9nergie dans la bande interdite d\u00fbs aux impuret\u00e9s du cristal\n",
+      "* Effet Auger: Transfert de l\u2019\u00e9nergie entre 3 particules (deux \u00e9lectrons et un trou ou deux trous et un \u00e9lectron) sans cr\u00e9ation de photons\n",
+      "\n",
+      "Rmq: Il existe de l\u2019absorption non photo\u00e9lectrique"
+     ]
+    },
+    {
+     "cell_type": "heading",
+     "level": 3,
+     "metadata": {},
+     "source": [
+      "La jonction P-N"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Il faut deux conditions pour \u00e9mettre beaucoup de photons:\n",
+      " \n",
+      "* probabilit\u00e9 \u00e9lev\u00e9e de recombinaisons radiatives (choix du mat\u00e9riau)\n",
+      "* densit\u00e9 \u00e9lev\u00e9e de porteurs libres (jonction PN)\n",
+      "\n",
+      "La joction PN polaris\u00e9e en direct entra\u00eene une tr\u00e8s forte densit\u00e9 de recombinaisons au niveau de la ZCE"
+     ]
+    },
+    {
+     "cell_type": "heading",
+     "level": 3,
+     "metadata": {},
+     "source": [
+      "Les mat\u00e9riaux"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Ils permettent de choisir la longueur d\u2019onde: l\u2019\u00e9nergie des photons g\u00e9n\u00e9r\u00e9s est $h_\\nu = h \\cfrac{c}{\\lambda} = E_g \\Rightarrow \\lambda = \\cfrac{1.24}{E_g}$ avec $\\lambda$ en $\\mu$m et $E_g$ en eV.\n",
+      "\n",
+      "Il y a un lien direct entre l\u2019\u00e9nergie de gab du SC et la longueur d\u2019onde \u00e9mise.\n",
+      "\n",
+      "Transition directe ou indirecte\n",
+      "\n",
+      "Les mat\u00e9riaux \u00e0 transition directe ont une probabilit\u00e9 \u00e9lev\u00e9e de recombinaison radiative, contrairement \u00e0 ceux \u00e0 transition indirecte.\n",
+      "\n",
+      "Le choix du mat\u00e9riau fait intervenir la longueur d\u2019onde \u00e9mmise et le type de transition. Les mat\u00e9riaux alliages de composants des colonnes III et IV du cableau de Mendeleiev sont utilis\u00e9 pour la r\u00e9alisation d\u2019\u00e9metteurs"
+     ]
+    },
+    {
+     "cell_type": "heading",
+     "level": 3,
+     "metadata": {},
+     "source": [
+      "Largeur spectrale d\u2019\u00e9mission"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "La probabilit\u00e9 d\u2019\u00e9mission \u00e0 partir d\u2019un porteur de quantit\u00e9 de mouvement non nulle est \u00e9lev\u00e9e.\n",
+      "\n",
+      "L\u2019\u00e9volution da l adensit\u00e9 de porteurs en fonction de leur \u00e9nergie \u00e9volue en $\\exp^{\\cfrac{-E}{k_BT}}$\n",
+      "\n",
+      "Mais la densit\u00e9 de niveau d\u2019\u00e9nergie disponibles \u00e9volue en $\\sqrt{E-E_g}$\n",
+      "\n",
+      "TODO:\u00a0plot une expo n\u00e9gaive et une sqrt, ainsi qu\u2019une courbe qui passe sous les deux autres, avec une largeur \u00e0 mi-hauteur de $\\Delta E = 1.8k_B$\n",
+      "\n",
+      "Or $\\lambda = \\cfrac{1.24}{E}\\Rightarrow\\cfrac{\\Delta\\lambda}{\\lambda}=\\cfrac{\\Delta E}{E}\\Rightarrow\\Delta\\lambda=\\cfrac{\\Delta E}{E_g}\\lambda=\\cfrac{\\Delta E}{1.24}\\lambda^2$\n",
+      "\n",
+      "Donc la largeur spectrale \u00e0 mi-hauteur $\\Delta\\lambda=\\cfrac{1.8k_BT}{1.24}\\lambda^2$"
+     ]
+    },
+    {
+     "cell_type": "heading",
+     "level": 2,
+     "metadata": {},
+     "source": [
+      "La DEL"
+     ]
+    },
+    {
+     "cell_type": "heading",
+     "level": 3,
+     "metadata": {},
+     "source": [
+      "Structure d\u2019une DEL"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "C\u2019est une diode dont la m\u00e9tallisation sup\u00e9rieur est am\u00e9nag\u00e9e afin de permettre la sortie des photons. La couche de semi-conducteur sup\u00e9rieure est fine pour limiter l\u2019absorption. On rajoute des couches isolantes sous la m\u00e9tallisation pour guider les porteurs sous la fen\u00eatre d\u2019\u00e9mission (slides 29 et 30)"
+     ]
+    },
+    {
+     "cell_type": "heading",
+     "level": 3,
+     "metadata": {},
+     "source": [
+      "Rendements"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "* Rendement d\u2019injection: $\\eta_{inj}=\\cfrac{\\text{Nombre de porteurs inject\u00e9s dans la zone P par seconde}}{\\text{Nombre total de porteurs inject\u00e9s par seconde}} \\simeq 1$\n",
+      "* Rendement radiatif: $\\eta_{rad}=\\cfrac{\\text{Nombre de recombinaisons rad/d}}{\\text{Nombre de porteurs inject\u00e9s dans P/s}}\\simeq 1$\n",
+      "* Rendement associ\u00e9 \u00e0 l\u2019angle critique: d\u2019apr\u00e8s Snell-Descartes, $\\theta_c=\\arcsin\\cfrac{n_0}{n_{sc}}\\simeq 17\u00b0$ pour l\u2019AsGa ($n_{sc}=3.5$). $F_{out} = \\int_0^{\\theta_c}I_{interne}d\\Omega=\\int_0^{\\theta_c}I_{interne}2\\pi\\sin\\theta d\\theta=2\\pi I_{interne}\\int_0^{\\theta_c}\\sin\\theta d\\theta=2\\pi I_{interne}(1-\\cos\\theta)\\Rightarrow\\eta_{critique}=\\cfrac{F_{out}}{F_{total}} = \\cfrac{1-\\cos\\theta_c}{2}$. Pour augmenter ce rendement, on enrobe la DEL\u00a0d\u2019un di\u00e9lectrique transparent d\u2019indice $n_d>n_0$. On atteint ainsi les 5%\n",
+      "* Rendement d\u2019absorption: $\\eta_{abs}=\\exp^{-\\alpha x}$, o\u00f9 $\\alpha$ est le coefficient d\u2019asorption (slide 31) et x l\u2019\u00e9paisseur de la couche sup\u00e9rieure du semi-conducteur.\n",
+      "* Pertes de Fresnel: il y a de la r\u00e9flexion \u00e0 l\u2019interface, et le coefficient le r\u00e9flexion est $R=\\left(\\cfrac{n_{sc}-n_0}{n_{sc}+n_0}\\right)^2$, et $\\eta_{fresnel}=1-R\\simeq 70\\%$ pour de l\u2019AsGa\n",
+      "\n",
+      "Rendement total : $\\eta_{tot}=\\eta_{inj}\\eta_{rad}\\eta_{crit}\\eta_{abs}\\eta_{fresnel}$"
+     ]
+    },
+    {
+     "cell_type": "heading",
+     "level": 3,
+     "metadata": {},
+     "source": [
+      "Puissance optique \u00e9mise"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "* Calcul de la puissance :\n",
+      "\n",
+      "Nombre d\u2019\u00e9lectrons inject\u00e9s = $\\cfrac{I_{DEL}}{q}$\n",
+      "\n",
+      "Flux \u00e9mis: $F_e = N_{photons/s}=h_\\nu\\Rightarrow F_e=eta_{tot}\\cfrac{I_{DEL}}{q}h_\\nu$, or $h_\\nu=E_g$ et $\\cfrac{E_g}{q}=\\cfrac{1.24}{\\lambda}\\Rightarrow F_e=\\eta_{total}\\cfrac{1.24}{\\lambda}I_{DEL}$\n",
+      "\n",
+      "* Effets thermiques: aux courants \u00e9lev\u00e9s, les rendements d\u2019injection et radiatifs chutent et la puissance \u00e9mise plafonne."
      ]
     },
     {
