--- a/skel.tex
+++ b/skel.tex
@@ -5,6 +5,7 @@
 \usepackage[a4paper,margin=1cm]{geometry}
 
 \usepackage{amsmath}
+\usepackage{amssymb}
 \usepackage{array}
 \usepackage{auto-pst-pdf}
 \usepackage{booktabs}
