retouches au cours d’opto en ipy

--- a/cours/Opto.ipynb
+++ b/cours/Opto.ipynb
@@ -19,7 +19,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Optique: Champs \u00e9lectromagn\u00e9tiques o\u00f9$ 10 nm < \\lambda < 1 mm $"
+      "Optique: Champs \u00e9lectromagn\u00e9tiques o\u00f9 $10 \\si{\\nano\\metre} < \\lambda < 1 \\si{\\nano\\metre} $."
      ]
     },
     {
@@ -43,7 +43,7 @@
      "level": 1,
      "metadata": {},
      "source": [
-      "Photom\u00e9trie & rayonnement du corps noir"
+      "Photom\u00e9trie et rayonnement du corps noir"
      ]
     },
     {
@@ -62,14 +62,14 @@
       "\n",
       "* Onde : $\\lambda$, $f = \\cfrac{c}{\\lambda}$, $v_g = \\cfrac{c}{n}$ ($n$ indice de r\u00e9fraction)\n",
       "\n",
-      "* Particule : $E = h\\nu$, o\u00f9 $h = 6.6\\cdot 10^{-34} Ws^2$, [Ws] = [J], mais $1 eV = 1.6\\cdot 10^{-19}J$ ; donc $E = \\cfrac{1.24}{\\lambda}$"
+      "* Particule : $E = h\\nu$, o\u00f9 $h = 6.6\\cdot 10^{-34} \\si{\\watt\\per\\square\\second}$, [Ws] = [J], mais $1 eV = 1.6\\cdot 10^{-19}\\si{\\joule}$ ; donc $E = \\cfrac{1.24}{\\lambda}$"
      ]
     },
     {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Afin de prendre en compte la sensibilit\u00e9 aux photons de l\u2019\u0153il humain : $1lm = 1.6\\cdot 10^{-3}W \u00e0 \\lambda = 550 nm$ (centre de la bande passante de l\u2019\u0153il)"
+      "Afin de prendre en compte la sensibilit\u00e9 aux photons de l\u2019\u0153il humain : $1\\si{\\lumen} = 1.6\\cdot 10^{-3}\\si{\\watt} \u00e0 \\lambda = 550 \\si{\\nano\\metre}$ (centre de la bande passante de l\u2019\u0153il)"
      ]
     },
     {
@@ -92,7 +92,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Def : valeur instantan\u00e9e d\u2019un d\u00e9bit de rayonnement, en W (ou en photons par seconde)"
+      "Def : valeur instantan\u00e9e d\u2019un d\u00e9bit de rayonnement, en $\\si{\\watt}$ (ou en photons par seconde)"
      ]
     },
     {
@@ -124,7 +124,7 @@
      "source": [
       "Def: Flux par unit\u00e9 de surface apparente de la source et par unit\u00e9 d\u2019angle solide.\n",
       "\n",
-      "$L = \\cfrac{dF}{\\cos\\theta dA_sd\\Omega}$, en $W\\cdot m^{-2}\\cdot sr^{-1}$\n",
+      "$L = \\cfrac{dF}{\\cos\\theta dA_sd\\Omega}$, en $\\si{\\watt\\per\\square\\metre\\per\\steradian}$\n",
       "\n",
       "Quand $\\theta$ influe peu sur la luminance, on dit que la source rayonne selon la **loi de Lambert** :\n",
       "\n",
@@ -145,7 +145,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Def : le flux \u00e9mis par unit\u00e9 de surface: $M = \\cfrac{dF}{dA_s} = \\int{L\\cos\\theta d\\Omega}$, en $W\\cdot m^{-2}$\n",
+      "Def : le flux \u00e9mis par unit\u00e9 de surface: $M = \\cfrac{dF}{dA_s} = \\int{L\\cos\\theta d\\Omega}$, en $\\si{\\watt\\per\\square\\metre}$\n",
       "\n",
       "**loi de Lambert** : $M = L\\int\\cos\\theta d\\theta$, et $F = \\int{MdA_s} = LA_s\\int\\cos\\theta d\\theta = 2\\pi LA_s\\int\\cos\\theta\\sin\\theta d\\theta=\\pi I_0 \\Rightarrow I_0 = \\cfrac{F}{\\pi}$"
      ]
@@ -166,7 +166,7 @@
       "\n",
       "Un point du r\u00e9cepteur re\u00e7oit un flux \u00e9l\u00e9mentaire $dF$\n",
       "\n",
-      "Def : L\u2019\u00e9clairement E en $W\\cdot m^{-2}$ est le rapport du flux par la surface du r\u00e9cepteur : $dE = \\cfrac{d^2F}{dA_R}$\n",
+      "Def : L\u2019\u00e9clairement E en $\\si{\\watt\\per\\square\\metre}$ est le rapport du flux par la surface du r\u00e9cepteur : $dE = \\cfrac{d^2F}{dA_R}$\n",
       "\n",
       "Donc $dF = L\\cos\\theta_sdA_sd\\Omega_R$ o\u00f9 $d\\Omega_R=\\cfrac{dA_r\\cos\\theta_R}{d^2} \\Rightarrow dE = L\\cfrac{dA_s\\cos\\theta_s\\cos\\theta_R}{d^2}$\n",
       "\n",
@@ -190,7 +190,7 @@
       "* Photoniques\n",
       "* Li\u00e9es \u00e0 l\u2019\u0153il\n",
       "\n",
-      "En gros, on passe de l\u2019\u00e9nerg\u00e9tique aux photoniques en passant des $W$ au $s^{-1}$, mais les photoniques d\u00e9pendent de $\\lambda$. "
+      "En gros, on passe de l\u2019\u00e9nerg\u00e9tique aux photoniques en passant des $\\si{\\watt}$ au $\\si{\\per\\second}$, mais les photoniques d\u00e9pendent de $\\lambda$. "
      ]
     },
     {
@@ -237,7 +237,7 @@
      "source": [
       "$\\lambda_M = \\cfrac{2898}{T}$\n",
       "\n",
-      "$\\cfrac{dM(\\lambda,T)}{d\\lambda} = 1.286\\cdot 10^{-5}\\cdot T^5$ en $W\\cdot m^3$."
+      "$\\cfrac{dM(\\lambda,T)}{d\\lambda} = 1.286\\cdot 10^{-5}\\cdot T^5$ en $\\si{\\watt\\cubic\\metre}$."
      ]
     },
     {
@@ -252,11 +252,11 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "$M_T = \\sigma T^4$ en $W\\cdot m^{-2}$, o\u00f9 $\\sigma = \\cfrac{2\\pi^5k_B^4}{15c^2h^3}$\n",
+      "$M_T = \\sigma T^4$ en $\\si{\\watt\\per\\square\\metre}$, o\u00f9 $\\sigma = \\cfrac{2\\pi^5k_B^4}{15c^2h^3}$\n",
       "\n",
-      "Donc le corps humain, qui fait en gros 37 degr\u00e9s et $2m^2$, $M_T = 500 Wm^{-2} \\Rightarrow F = 1 kW$.\n",
+      "Donc le corps humain, qui fait en gros 37 degr\u00e9s et $2\\si{\\square\\metre}$, $M_T = 500 \\si{\\watt\\per\\square\\metre} \\Rightarrow F = 1 \\si{\\kilo\\watt}$.\n",
       "\n",
-      "Pour le filament de tyngst\u00e8ne, $T = 5800K \\Rightarrow M_T = 348\\cdot 10^4 Wm^{-2} \\Rightarrow F = 38.8W$"
+      "Pour le filament de tyngst\u00e8ne, $T = 5800\\si{\\kelvin} \\Rightarrow M_T = 348\\cdot 10^4 \\si{\\watt\\per\\square\\metre} \\Rightarrow F = 38.8\\si\\watt$"
      ]
     },
     {
@@ -495,13 +495,15 @@
       "\n",
       "$P_{inj}=10dBm$\n",
       "\n",
-      "+----------+----------+------------+----------+\n",
-      "|          |    1km   |     10km   |  100km   |\n",
-      "+----------+----------+------------+----------+\n",
-      "| Laser 1  |    7dBm  |   20dBm    |  190dBm  |\n",
-      "+----------+----------+------------+----------+\n",
-      "| Laser 2  |          |    8dBm    |  10 dBm  |\n",
-      "+----------+----------+------------+----------+"
+      "\\begin{tabular}{|l|c|c|c|}\n",
+      "\\hline\n",
+      " & 1km & 10km & 100 km \\\\\n",
+      "\\hline\n",
+      "Laser 1 & 7dBm & 20dBm & 190 dBm \\\\\n",
+      "\\hline\n",
+      "Laser 2 & & 8dBm & 10dBm \\\\\n",
+      "\\hline\n",
+      "\\end{tabular}"
      ]
     },
     {
@@ -571,9 +573,9 @@
       "\n",
       "FGI: $n_c=1,53;n_g=1.5\\Rightarrow ON=0.02$\n",
       "\n",
-      "$D_{m_{FSI}} = 49 ns/km$\n",
+      "$D_{m_{FSI}} = 49 \\si{\\nano\\second\\per\\kilo\\metre}$\n",
       "\n",
-      "$D_{m_{FGI}} = 255 ps/km$"
+      "$D_{m_{FGI}} = 255 \\si{\\pico\\second\\per\\kilo\\metre}$"
      ]
     },
     {
@@ -597,7 +599,7 @@
       "\n",
       "$\\Delta T = D_\\lambda \\Delta_\\lambda L_{FO}$\n",
       "\n",
-      "$D_\\lambda$ est le terme de dispersion chromatique: $D_\\lambda=-\\cfrac{\\lambda}{c}\\cfrac{d^2x}{d\\lambda^2}$ en [ps/nm/km]\n",
+      "$D_\\lambda$ est le terme de dispersion chromatique: $D_\\lambda=-\\cfrac{\\lambda}{c}\\cfrac{d^2x}{d\\lambda^2}$ en [$\\si{\\pico\\second\\per\\nano\\metre\\per\\kilo\\metre}$]\n",
       "\n",
       "$\\sigma_{\\Delta t_lambda} = |D_\\lambda|\\sigma_{\\Delta_\\lambda}L_{FO}$\n",
       "\n",
@@ -607,9 +609,9 @@
       "\n",
       "$D_\\lambda = 0$ \u00e0 1330nm\n",
       "\n",
-      "$D_\\lambda = 17$ ps/nm/km \u00e0 1550nm\n",
+      "$D_\\lambda = 17 \\si{\\pico\\second\\per\\nano\\metre\\per\\kilo\\metre}$ \u00e0 1550nm\n",
       "\n",
-      "$D_\\lambda = -80$ ps/nm/km \u00e0 850nm"
+      "$D_\\lambda = -80 \\si{\\pico\\second\\per\\nano\\metre\\per\\kilo\\metre}$ \u00e0 850nm"
      ]
     },
     {
@@ -624,19 +626,19 @@
       "\n",
       "AN: FGI multimode : $n_c=1,53;n_g=1.5$\n",
       "\n",
-      "$D_{m_{FGI}} = 255 ps/km$\n",
+      "$D_{m_{FGI}} = 255 \\si{\\pico\\second\\per\\kilo\\metre}$\n",
       "\n",
-      "Laser $\\lambda=850$nm, $\\sigma_{\\Delta_\\lambda} = 10$nm\n",
+      "Laser $\\lambda=850 \\si{\\nano\\metre}$, $\\sigma_{\\Delta_\\lambda} = 10 \\si{\\nano\\metre}$\n",
       "\n",
-      "$D_\\lambda = -80$ ps/nm/km\n",
+      "$D_\\lambda = -80\\si{\\pico\\second\\per\\nano\\metre\\per\\kilo\\metre}$ \n",
       "\n",
-      "$L_{FO} = 1$ km\n",
+      "$L_{FO} = 1\\si{\\kilo\\metre}$ \n",
       "\n",
-      "$\\sigma_{\\Delta t_m} = 255$ ps\n",
+      "$\\sigma_{\\Delta t_m} = 255\\si{\\pico\\second}$\n",
       "\n",
-      "$\\sigma_{\\Delta t_\\lambda} = 800$ ps\n",
+      "$\\sigma_{\\Delta t_\\lambda} = 800\\si{\\pico\\second}$\n",
       "\n",
-      "$\\sigma_{\\Delta t_{tot}} = 840$ ps\n",
+      "$\\sigma_{\\Delta t_{tot}} = 840\\si{\\pico\\second}$\n",
       "\n",
       "$BP = 1.2$ GHz pour 1km\n",
       "\n",
@@ -760,7 +762,7 @@
       "\n",
       "Il existe une longeur d\u2019onde maximale pour laquelle il n\u2019y a plus d\u2019absorption: $\\lambda_g = \\cfrac{hc}{E_g} = \\cfrac{1.24}{E_g}$, avec $\\lambda$ en $\\mu$m et $E_g$ en eV\n",
       "\n",
-      "Le flux de photons dans un semiconducteur : $F(\\lambda) = F_0\\exp^{-\\alpha x}$, o\u00f9 $\\alpha$ est l\u2019absorption en $m^{-1}$\n",
+      "Le flux de photons dans un semiconducteur : $F(\\lambda) = F_0\\exp^{-\\alpha x}$, o\u00f9 $\\alpha$ est l\u2019absorption en $\\si{\\per\\metre}$\n",
       "\n",
       "slide 31"
      ]
@@ -804,9 +806,9 @@
      "source": [
       "TODO: la diode (A en bas, K en haut, triangle vers le haut) est \u00e9quivalente \u00e0 une source de courant (Iph) en parall\u00e8le \u00e0 une capa Cj et une r\u00e9sistance Rsh, A en bas, et une r\u00e9sistance Rs vers K en haut.\n",
       "\n",
-      "$R_{sh} > M\\Omega$\n",
+      "$R_{sh} > \\si{\\mega\\ohm}$\n",
       "\n",
-      "$R_s < \\Omega$\n",
+      "$R_s < \\si\\ohm$\n",
       "\n",
       "$C_j(V)=\\cfrac{C_j(V=0)}{\\sqrt{1+\\cfrac{V}{V_{PN}}}}$\n",
       "\n",
@@ -831,16 +833,21 @@
       "\n",
       "* Structure\n",
       "\n",
-      "    - La zone frontale doit \u00e0tre la plus fine possible\n",
-      "    - La ZCE est le lieu de collecte des photons\n",
-      "    - La zone arri\u00e8re voit tr\u00e8s peu de photons\n",
+      "    * La zone frontale doit \u00e0tre la plus fine possible\n",
+      "    * La ZCE est le lieu de collecte des photons\n",
+      "    * La zone arri\u00e8re voit tr\u00e8s peu de photons\n",
       "\n",
       "* Bande-Passante\n",
       "\n",
-      "Elle est li\u00e9e\n",
+      "Elle est li\u00e9e:\n",
       "\n",
-      "    - Au temps de transit des porteurs: $t_{tr} = \\cfrac{d}{v_n} \\simeq 10$ps\n",
-      "    - La constante de temps li\u00e9e \u00e0 la capa de jonction : TODO masse, Rload, diode rightarrow $f_c=\\cfrac{1}{2\\pi R_{load}C_j}$\n",
+      "Au temps de transit des porteurs:\n",
+      "\n",
+      "$ t_{tr} = \\cfrac{d}{v_n} \\simeq 10\\si{\\pico\\second} $\n",
+      "\n",
+      "La constante de temps li\u00e9e \u00e0 la capa de jonction : TODO masse, Rload, diode \n",
+      "\n",
+      "$\\rightarrow f_c=\\cfrac{1}{2\\pi R_{load}C_j} $\n",
       "\n",
       "Des deux ph\u00e9nom\u00e8nes, le plus contraignant impose la Bande Passante\n",
       "\n",
@@ -852,7 +859,7 @@
       "\n",
       "$\\nu_q=\\cfrac{\\text{nombre de paires electron-trou par seconde}}{\\text{nombre de photons par seconde}}$\n",
       "\n",
-      "nombre de paires electron-trou par seconde = $\\cfrac{I_{ph}}{q} \\Rightarrow R_\\lambda=\\cfrac{q}{h_\\nu}\\nu_q=\\cfrac{\\lambda}{1.24}\\nu_q$ pour $\\lambda$ en $\\mu$m."
+      "nombre de paires electron-trou par seconde = $\\cfrac{I_{ph}}{q} \\Rightarrow R_\\lambda=\\cfrac{q}{h_\\nu}\\nu_q=\\cfrac{\\lambda}{1.24}\\nu_q$ pour $\\lambda$ en $\\si{\\micro\\metre}$"
      ]
     },
     {
@@ -883,17 +890,17 @@
       "\n",
       "* La densit\u00e9 spectrale de puissance ($S_B$)\n",
       "\n",
-      "C\u2019est la puisnace du bruit sur 1Hz\n",
+      "C\u2019est la puissance du bruit sur 1\\si{\\hertz}\n",
       "\n",
-      "$P_B = \\int_0^{BP}S_Bdf$, avec $S_B$ en W/Hz\n",
+      "$P_B = \\int_0^{BP}S_Bdf$, avec $S_B$ en \\si{\\watt\\per\\hertz}\n",
       "\n",
       "Bruit thermique et grenailles sont des bruits blancs, donc $P_B=S_B\\times BP$\n",
       "\n",
       "* Densit\u00e9 spectrale de courant et de tension\n",
       "\n",
-      "$S_B=S_iR_{load}$, $S_i$ en A\u00b2/Hz\n",
+      "$S_B=S_iR_{load}$, $S_i$ en \\si{\\square\\ampere\\per\\hertz}\n",
       "\n",
-      "$S_B=\\cfrac{S_v}{R_{load}}, $S_v$ en V\u00b2/Hz\n",
+      "$S_B=\\cfrac{S_v}{R_{load}}, $S_v$ en \\si{\\square\\volt\\per\\hertz}\n",
       "\n",
       "Pour le bruit thermique, $S_i=\\cfrac{4k_BT}{R}$ et $S_v=4k_BTR$ TODO R//source de courant et R s\u00e9rie avec source de tension\n",
       "\n",
@@ -901,9 +908,9 @@
       "\n",
       "* Courant ou tension de bruit\n",
       "\n",
-      "On d\u00e9finit $i_d=\\sqrt{S_i}$ en A/$\\sqrt{\\text{Hz}}$ et $v_d=\\sqrt{S_v}$ en V/$\\sqrt{\\text{Hz}}$\n",
+      "On d\u00e9finit $i_d=\\sqrt{S_i}$ en \\si{\\ampere\\per\\hertz\\tothe{0.5}} et $v_d=\\sqrt{S_v}$ en \\si{\\volt\\per\\hertz\\tothe{0.5}}$\n",
       "\n",
-      "Ce sont des valeursefficaces calcul\u00e9es sur une bande de 1Hz.\n",
+      "Ce sont des valeursefficaces calcul\u00e9es sur une bande de 1\\si\\hertz.\n",
       "\n",
       "Rem: lois de Kirschoff\n",
       "\n",
@@ -990,19 +997,21 @@
       "\n",
       "$t_d=\\cfrac{d_g}{v_n} + \\cfrac{d_g}{v_p} + t_{\\text{mult}}$\n",
       "\n",
-      "NB: $t_{d_{APD}} >> T_{d_{PIN}}$\n",
+      "NB: $t_{d_{APD}} \\gg T_{d_{PIN}}$\n",
       "\n",
       "* Domaines d\u2019utilisation\n",
       "\n",
-      "+-----------------+-----------------+-----------------+\n",
-      "|                 |      PIN        |    \u00a0\u00a0\u00a0APD       |\n",
-      "+-----------------+-----------------+-----------------+\n",
-      "|        BP       |        +        |       -         |\n",
-      "+-----------------+-----------------+-----------------+\n",
-      "|  sensibilit\u00e9    |        -        |       +         |\n",
-      "+-----------------+-----------------+-----------------+\n",
-      "| mise en \u0153uvre   |        ++       |       -         |\n",
-      "+-----------------+-----------------+-----------------+\n",
+      "\\begin{tabular}{|c|c|c|}\n",
+      "\\hline\n",
+      "& PIN & APD \\\\\n",
+      "\\hline\n",
+      "BP & + & - \\\\\n",
+      "\\hline\n",
+      "sensibilit\u00e9 & - & + \\\\\n",
+      "\\hline\n",
+      "mise en \u0153uvre & ++ & - \\\\\n",
+      "\\hline\n",
+      "\\end{tabular}\n",
       "\n",
       "\n",
       "Principalement des applications de puissance optique constante de tr\u00e8s faible intensit\u00e9 (spatial)\n",
@@ -1013,7 +1022,7 @@
       "\n",
       "=> <$I_{ph}$> = 28 muA => $S_{i_g} = 8.96\\cdot10^{-24}$A\u00b2/Hz\n",
       "\n",
-      "BP = 1GHz => PEB = $2.3\\cdot10^{-14}$W/$\\sqrt{Hz}$ => $P_{b_{opt}} = 7.3\\cdot10^{-4}$ \\muW\n",
+      "BP = 1GHz => PEB = $2.3\\cdot10^{-14}$W/$\\sqrt{Hz}$ => $P_{b_{opt}} = 7.3\\cdot10^{-4} \\mu$ W\n",
       "\n",
       "Soit $RSB = \\cfrac{0.1}{7.3\\cdot10^{-4}}\\simeq 100$\n",
       "\n",
