--- a/cours/Opto/Opto.tex
+++ b/cours/Opto/Opto.tex
@@ -721,7 +721,7 @@ $P_B=S_B\times BP$
 
 $S_B=S_iR_{load}$, $S_i$ en \si{\square\ampere\per\hertz}
 
-$S_B=\cfrac{S_v}{R_{load}}, $S\_v\$ en \si{\square\volt\per\hertz}
+$S_B=\cfrac{S_v}{R_{load}}, S_v$ en \si{\square\volt\per\hertz}
 
 Pour le bruit thermique, $S_i=\cfrac{4k_BT}{R}$ et $S_v=4k_BTR$
 
